@@ -1,1 +1,1 @@
-OpenAES-0.5.0
+OpenAES-0.6.0
