@@ -1,8 +1,12 @@
 ---------------------------------------------------------------------------
-OpenAES-0.5.0
+OpenAES-0.6.0
 Nabil S. Al Ramli
 www.nalramli.com
 ---------------------------------------------------------------------------
+
+OpenAES-0.6.0
+-------------
+* add stepping pause to vt_aes
 
 OpenAES-0.5.0
 -------------
